@@ -3,14 +3,11 @@ access_outdir = $(pluginsdir)/access_output
 libaccess_output_dummy_plugin_la_SOURCES = access_output/dummy.c
 libaccess_output_file_plugin_la_SOURCES = access_output/file.c
 libaccess_output_http_plugin_la_SOURCES = access_output/http.c
-libaccess_output_udp_plugin_la_SOURCES = access_output/udp.c
-libaccess_output_udp_plugin_la_LIBADD = $(SOCKET_LIBS)
 
 access_out_LTLIBRARIES = \
 	libaccess_output_dummy_plugin.la \
 	libaccess_output_file_plugin.la \
-	libaccess_output_http_plugin.la \
-	libaccess_output_udp_plugin.la
+	libaccess_output_http_plugin.la
 
 libaccess_output_livehttp_plugin_la_SOURCES = access_output/livehttp.c
 libaccess_output_livehttp_plugin_la_CFLAGS = $(AM_CFLAGS) $(GCRYPT_CFLAGS)
